# github-analyser

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
analysis/: who-are-reg.ipynb
gilamorelab-dashboards/: GitHub - Operations Admin.ndjson  GitHub - Viz.ndjson  README.md
scripts/: pagination_test.py
src/github-analyser/: __init__.py
src/github_analyser/: __init__.py  commits.py  commits2.py  issues.py  licences.py  org_members.py  org_user_info.py  pagination_test.py  pull_requests.py  pullrequests.py  repo_contributors.py  repo_user_info.py  repos.py  team_user_info.py  utils.py
tests/: conftest.py  mock_github.py  test_data_getters.py  test_utils.py
